Fixes #67 increase e max_length to 400 for CharFields

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -1895,7 +1895,7 @@ function expand(e, id) {
                 ${!data.stationer_publisher ? '' : '<span class="expand">Publisher: </span><span id="stationer_publisher">' + data.stationer_publisher + '</span><br>'}
                 ${!data.stationer_bookseller ? '' : '<span class="expand">Bookseller: </span><span id="stationer_bookseller">' + data.stationer_bookseller + '</span><br>'}
                 ${data.stationer_entries_in_register === "None" ? "" : "<span class='expand'>Entries in Stationers' Register: </span><span id='stationer_entries_in_register'>" + data.stationer_entries_in_register + '</span><br>'}
-                ${!data.stationer_additional_notes ? '' : '<span class="expand">Notes: </span><span id="stationer_additional_notes">' + data.stationer_additional_notes + '</span><br>'}
+                ${!data.stationer_additional_notes ? '' : '<span class="expand">Additional Notes: </span><span id="stationer_additional_notes">' + data.stationer_additional_notes + '</span><br>'}
               </p>
             </div>
           </div>
