--- a/main/templates/sources.html
+++ b/main/templates/sources.html
@@ -13,39 +13,39 @@
         
                 <p>The main bibliographic sources for DEEP are listed here by field. These sources may be supplemented by additional scholarship, in which case the relevant work is cited in the Additional Notes for the DEEP record.</p>
 
-                <p><b>Author (Modern Attribution):</b> based on Annals of English Drama, 975-1700, 3rd edition, ed. Alfred Harbage, Samuel Schoenbaum, and Sylvia Stoler Wagonheim (London: Routledge, 1989); Fredson Bowers, gen. ed., The Dramatic Works in the Beaumont and Fletcher Canon, vol. 10 (Cambridge: Cambridge UP, 1996), 751-52; and Gary Taylor and John Lavagnino, with MacDonald P. Jackson, John Jowett, Valerie Wayne, and Adrian Weiss, eds., Thomas Middleton and Early Modern Textual Culture: A Companion to the Collected Works (Oxford: Clarendon, 2007).</p>
+                <p><b>Author (Modern Attribution):</b> based on <i>Annals of English Drama, 975-1700</i>, 3rd edition, ed. Alfred Harbage, Samuel Schoenbaum, and Sylvia Stoler Wagonheim (London: Routledge, 1989); Fredson Bowers, gen. ed., <i>The Dramatic Works in the Beaumont and Fletcher Canon</i>, vol. 10 (Cambridge: Cambridge UP, 1996), 751-52; and Gary Taylor and John Lavagnino, with MacDonald P. Jackson, John Jowett, Valerie Wayne, and Adrian Weiss, eds., <i>Thomas Middleton and Early Modern Textual Culture: A Companion to the Collected Works</i> (Oxford: Clarendon, 2007).</p>
                 
-                <p><b>Company (First Production):</b> based on Gerald Eades Bentley, The Jacobean and Caroline Stage, 7 vols. (Oxford: Clarendon, 1941-68); Martin Butler, "Exeunt Fighting: Poets, Players, and Impresarios at the Caroline Hall Theaters," in Adam Zucker and Alan B. Farmer, eds, Localizing Caroline Drama: Politics and Economics of the Early Modern English Stage, 1625-1642 (New York: Palgrave, 2006), 97-128; Andrew Gurr, Shakespearian Playing Companies (Oxford: Clarendon, 1996); Scott McMillin and Sally-Beth MacLean, The Queen's Men and Their Plays (Cambridge: Cambridge UP, 1998); and Lucy Munro, Children of the Queen's Revels: A Jacobean Theatre Repertory (Cambridge: Cambridge UP, 2005).</p>
+                <p><b>Company (First Production):</b> based on Gerald Eades Bentley, <i>The Jacobean and Caroline Stage</i>, 7 vols. (Oxford: Clarendon, 1941-68); Martin Butler, "Exeunt Fighting: Poets, Players, and Impresarios at the Caroline Hall Theaters," in Adam Zucker and Alan B. Farmer, eds, <i>Localizing Caroline Drama: Politics and Economics of the Early Modern English Stage, 1625-1642</i> (New York: Palgrave, 2006), 97-128; Andrew Gurr, <i>Shakespearian Playing Companies</i> (Oxford: Clarendon, 1996); Scott McMillin and Sally-Beth MacLean, <i>The Queen's Men and Their Plays</i> (Cambridge: Cambridge UP, 1998); and Lucy Munro, <i>Children of the Queen's Revels: A Jacobean Theatre Repertory</i> (Cambridge: Cambridge UP, 2005).</p>
                 
                 <p><b>Company (Playbook Attribution):</b> company names standardized based on Bentley and Gurr.</p>
                 
-                <p><b>Date of First Production:</b> based on Annals; Stanley Wells and Gary Taylor, with John Jowett and William Montgomery, William Shakespeare: A Textual Companion (1987; New York: Norton, 1997); and Thomas Middleton and Early Modern Textual Culture.</p>
+                <p><b>Date of First Production:</b> based on <i>Annals</i>; Stanley Wells and Gary Taylor, with John Jowett and William Montgomery, <i>William Shakespeare: A Textual Companion</i> (1987; New York: Norton, 1997); and <i>Thomas Middleton and Early Modern Textual Culture.</i></p>
                 
-                <p><b>Date of First Edition:</b> dates derived from W.W. Greg, A Bibliography of the English Printed Drama to the Restoration, 4 vols. (London: Bibliographical Society, 1939-59); from A Short-Title Catalogue of Books Printed in England, Scotland, & Ireland and of English Books Printed Abroad, 1475-1640 (STC), 2nd edition, ed. A.W. Pollard, G. R. Redgrave, W. A. Jackson, F. S. Ferguson, and Katharine F. Pantzer, 3 vols. (London: Bibliographical Society, 1976-91); and from Donald Wing, ed., Short-Title Catalogue of Books Printed in England, Scotland, Ireland, Wales, and British America, and of English Books Printed in Other Countries, 1641-1700, 2nd edition, 4 vols. (New York: MLA, 1972-98).</p>
+                <p><b>Date of First Edition:</b> dates derived from W.W. Greg, <i>A Bibliography of the English Printed Drama to the Restoration</i>, 4 vols. (London: Bibliographical Society, 1939-59); from <i>A Short-Title Catalogue of Books Printed in England, Scotland, & Ireland and of English Books Printed Abroad, 1475-1640</i> (STC), 2nd edition, ed. A.W. Pollard, G. R. Redgrave, W. A. Jackson, F. S. Ferguson, and Katharine F. Pantzer, 3 vols. (London: Bibliographical Society, 1976-91); and from Donald Wing, ed., <i>Short-Title Catalogue of Books Printed in England, Scotland, Ireland, Wales, and British America, and of English Books Printed in Other Countries, 1641-1700</i>, 2nd edition, 4 vols. (New York: MLA, 1972-98).</p>
                 
-                <p><b>Dedication:</b> dedicatee names standardized and modernized based on the Oxford Dictionary of National Biography and Franklin B. Williams, Jr., Index of Dedications and Commendatory Verses in English Books Before 1641 (London: Bibliographical Society, 1962).</p>
+                <p><b>Dedication:</b> dedicatee names standardized and modernized based on the <i>Oxford Dictionary of National Biography</i> and Franklin B. Williams, Jr., <i>Index of Dedications and Commendatory Verses in English Books Before 1641</i> (London: Bibliographical Society, 1962).</p>
                 
-                <p><b>Entries in Stationers' Register:</b> based on Greg, and Edward Arber, A Transcript of the Registers of the Company of Stationers of London, 1554-1640, 5 vols, (1875-1894; Gloucester: Peter Smith, 1967).</p>
+                <p><b>Entries in Stationers' Register:</b> based on Greg, and Edward Arber, <i>A Transcript of the Registers of the Company of Stationers of London, 1554-1640</i>, 5 vols, (1875-1894; Gloucester: Peter Smith, 1967).</p>
                 
-                <p><b>Format:</b> based on Greg and STC/Wing, except that DEEP differs with Greg on large-paper quartos, which Greg calls octavos in quarto format, but which DEEP calls quartos, following G.T. Tanselle, "The Concept of Format," Studies in Bibliography 53 (2000): 67-115.</p>
+                <p><b>Format:</b> based on Greg and STC/Wing, except that DEEP differs with Greg on large-paper quartos, which Greg calls octavos in quarto format, but which DEEP calls quartos, following G.T. Tanselle, "The Concept of Format," Studies in <i>Bibliography</i> 53 (2000): 67-115.</p>
                 
                 <p><b>Imprint Location:</b> based on the attributions and map coordinates in STC volume 3.</p>
                 
-                <p><b>Genre (Annals):</b> based on the classifications in Annals.</p>
+                <p><b>Genre (Annals):</b> based on the classifications in <i>Annals</i>.</p>
                 
                 <p><b>Leaves:</b> based on Greg, ESTC, and EEBO.</p>
                 
                 <p><b>Paratextual Material:</b> Information on most paratexts is derived from Greg and EEBO.</p>
                 
-                <p><b>Play Type:</b> based on Annals.</p>
+                <p><b>Play Type:</b> based on <i>Annals</i>.</p>
                 
                 <p><b>Printer:</b> printer attributions have been supplemented by ascriptions in Greg, STC/Wing, and ESTC.</p>
                 
-                <p><b>Title:</b> based on Annals and Greg.</p>
+                <p><b>Title:</b> based on <i>Annals</i> and Greg.</p>
                 
                 <p><b>Title-Page Features:</b> transcriptions based on Greg, ESTC, and EEBO.</p>
                 
-                <p><b>Variants:</b> informed by Greg and STC/Wing, but the distinction between "issues" and "states" derives from the theory laid out in G.T. Tanselle, "The Bibliographical Concepts of Issue and State," Papers of the Bibliographical Society of America 69 (1975): 17-66.</p>
+                <p><b>Variants:</b> informed by Greg and STC/Wing, but the distinction between "issues" and "states" derives from the theory laid out in G.T. Tanselle, "The Bibliographical Concepts of Issue and State," <i>Papers of the Bibliographical Society of America</i> 69 (1975): 17-66.</p>
                 
                 <p><b>Year:</b> based on Greg and STC/Wing.</p>    
                             
