--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -32,7 +32,14 @@
                 {% if data.stc %}
                 <span class="expand">STC/WING: </span><span id="stc">{{ data.stc }}</span><br>
                 {% endif %}
-                
+                {% if data.brit_drama_number %}
+                <span class="expand">BritDrama #: </span><span id="stc">{{ data.brit_drama_number }}</span><br>
+                {% endif %}
+              </p>
+              <p>
+                {% if data.date_first_publication %}
+                <span class="expand">Date of First Publication: </span><span id="date_first_publication">{{ data.date_first_publication }}</span><br>
+                {% endif %}
                 {% if data.book_edition %}
                 <span class="expand">Book Edition: </span><span id="book_edition">{{ data.book_edition }}</span><br>
                 {% endif %}
@@ -45,27 +52,11 @@
                 {% if data.leaves %}
                 <span class="expand">Leaves: </span><span id="leaves">{{ data.leaves }}</span><br>
                 {% endif %}
-                {% if data.total_editions %}
-                <br><span class="expand">Total Editions:</span><span id="total_editions">{{ data.total_editions }}</span><br>
+                {% if data.blackletter %}
+                <span class="expand">Black Letter: </span><span id="leaves">{{ data.blackletter }}</span><br>
                 {% endif %}
-                {% if data.variants %}
-                <br><span class="expand">Variants:</span><span id="variants">{{ data.variants }} {{ data.variant_link|safe }}<br>
-                {% endif %}
-                {% if data.in_collection %}    
-                <br><span class="expand">In Collection:</span><span id="in_collection"> {{ data.in_collection|safe }}</span><br>
-                {% endif %}
-                {% if data.collection_contains %}
-                <br><span class="expand">Collection Contains:</span><span id="collection_contains"> {{ data.collection_contains|safe }}</span><br>
-                {% endif %}
-                {% if data.independent_playbook %}
-                <br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a href="{{ data.independent_playbook_link_id }}.html">{{ data.independent_playbook }}</a></span><br>
-                {% endif %}
-                {% if data.also_in_collection %}
-                <br><span class="expand">Also appears in collection: </span><span id="also_in_collection">{{ data.also_in_collection_link|safe }}</span><br>
-                {% endif %}
-            </p>
-            </div>
-            
+                </p>
+              </div>
     
             <div class="col-7">
               <p>
@@ -78,27 +69,49 @@
                 {% if data.genre %}
                 <span class="expand">Genre (Annals): </span><span id="genre">{{ data.genre }}</span><br>
                 {% endif %}
-                {% if data.date_first_publication %}
-                <br><span class="expand">Date of First Publication: </span><span id="date_first_publication">{{ data.date_first_publication }}</span><br>
+                {% if data.genre_brit_display %} 
+                <span class="expand">Genre (BritDrama): </span><span id="genre_brit_display">{{ data.genre_brit_display }}</span><br>
                 {% endif %}
+              </p>
+              <p>
                 {% if data.date_first_performance %}
-                <span class="expand">Date of First Performance: </span><span id="date_first_performance">{{ data.date_first_performance }}</span><br>
+                <span class="expand">Date of First Production (Annals):</span><span id="date_first_performance">{{ data.date_first_performance }}</span><br>
                 {% endif %}
-                {% if data.theater %}
-                <span class="expand">Theater: </span><span id="theater">{{ data.theater }}</span><br>
-                {% endif %}
-                {% if data.theater_type %}
-                <span class="expand">Theater type: </span><span id="theater_type">{{ data.theater_type }}</span><br>
+                {% if data.date_first_performance_brit_display %}
+                <span class="expand">Date of First Production (BritDrama): </span><span id="date_first_performance_brit_display">{{ data.date_first_performance_brit_display }}</span><br>
                 {% endif %}
                 {% if data.company_first_performance %}
-                <span class="expand">Company of First Performance: </span><span id="company_first_performance">{{ data.company_first_performance }}</span><br>
+                <span class="expand">Company of First Production (Annals): </span><span id="company_first_performance">{{ data.company_first_performance }}</span><br>
+                {% endif %}
+                {% if data.company_first_performance_brit_display %}
+                <span class="expand">Company of First Production (BritDrama): </span><span id="company_first_performance_brit_display">{{ data.company_first_performance_brit_display }}</span><br>
                 {% endif %}
                 {% if data.company_attribution %}
-                <span class="expand">Company Attribution: </span><span id="company_attribution">{{ data.company_attribution }}</span><br>
+                <span class="expand">Company Attribution (Title-Page): </span><span id="company_attribution">{{ data.company_attribution }}</span><br>
                 {% endif %}
             </p>
             </div>
-
+            <div class="col-12">
+              {% if data.total_editions %}
+              <br><span class="expand">Total Editions:</span><span id="total_editions">{{ data.total_editions }}</span><br>
+              {% endif %}
+              {% if data.variants %}
+              <br><span class="expand">Variants:</span><span id="variants">{{ data.variants }} {{ data.variant_link|safe }}<br>
+              {% endif %}
+              {% if data.in_collection %}    
+              <br><span class="expand">In Collection:</span><span id="in_collection"> {{ data.in_collection|safe }}</span><br>
+              {% endif %}
+              {% if data.collection_contains %}
+              <br><span class="expand">Collection Contains:</span><span id="collection_contains"> {{ data.collection_contains|safe }}</span><br>
+              {% endif %}
+              {% if data.independent_playbook %}
+              <br><span class="expand">Also appears as a bibliographically independent playbook in </span><span id="independent_playbook"><a href="{{ data.independent_playbook_link_id }}.html">{{ data.independent_playbook }}</a></span><br>
+              {% endif %}
+              {% if data.also_in_collection %}
+              <br><span class="expand">Also appears in collection: </span><span id="also_in_collection">{{ data.also_in_collection_link|safe }}</span><br>
+              {% endif %}
+              
+            </div>
           </div>  
          </div>
       </div>
@@ -115,20 +128,20 @@
                 {% if data.title_page_author %}
                 <span class="expand">Author: </span><span id="title_page_author">{{ data.title_page_author }}</span><br>
                 {% endif %}
-                {% if data.theater_type %}
+                {% if data.title_page_performance %}
                 <span class="expand">Performance: </span><span id="title_page_performance">{{ data.title_page_performance }}</span><br>
+                {% endif %}
+                {% if data.title_page_latin_motto %}
+                <span class="expand">Latin Motto: </span><span id="title_page_latin_motto">{{ data.title_page_latin_motto }}</span><br>
+                {% endif %}
+                {% if data.title_page_illustration %}
+                <span class="expand">Illustration: </span><span id="title_page_illustration">{{ data.title_page_illustration }}</span><br>
                 {% endif %}
                 {% if data.title_page_imprint %}
                 <span class="expand">Imprint: </span><span id="title_page_imprint">{{ data.title_page_imprint }}</span><br>
                 {% endif %}
                 {% if data.title_page_colophon %}
                 <span class="expand">Colophon: </span><span id="title_page_colophon">{{ data.title_page_colophon }}</span><br>
-                {% endif %}
-                {% if data.title_page_illustration %}
-                <span class="expand">Illustration: </span><span id="title_page_illustration">{{ data.title_page_illustration }}</span><br>
-                {% endif %}
-                {% if data.title_page_latin_motto %}
-                <span class="expand">Latin Motto: </span><span id="title_page_latin_motto">{{ data.title_page_latin_motto }}</span><br>
                 {% endif %}
             </p>
             </div>
@@ -154,14 +167,14 @@
                 {% if data.paratext_to_the_reader %}
                 <span class="expand">To the Reader: </span><span id="paratext_to_the_reader">{{ data.paratext_to_the_reader }}</span><br>
                 {% endif %}
-                {% if data.paratext_errata %}
-                <span class="expand">Errata: </span><span id="paratext_errata">{{ data.paratext_errata }}</span><br>
-                {% endif %}
                 {% if data.paratext_argument %}
                 <span class="expand">Argument: </span><span id="paratext_argument">{{ data.paratext_argument }}</span><br>
                 {% endif %}
                 {% if data.paratext_charachter_list %}
                 <span class="expand">Charachter List: </span><span id="paratext_charachter_list">{{ data.paratext_charachter_list }}</span><br>
+                {% endif %}
+                {% if data.paratext_errata %}
+                <span class="expand">Errata: </span><span id="paratext_errata">{{ data.paratext_errata }}</span><br>
                 {% endif %}
                 {% if data.paratext_actor_list %}
                 <span class="expand">Actor List: </span><span id="paratext_actor_list">{{ data.paratext_actor_list }}</span><br>
