--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,20 +11,20 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.ico" rel="icon">
+  <link href="{% static '/img/favicon.ico' %}" rel="icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Dosis:300,400,500,,600,700,700i|Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <!-- <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+  <link href="{% static '/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+  <link href="{% static '/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+  <!-- <link href="{% static '/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="{% static '/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="{% static '/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="{% static '/css/style.css' %}" rel="stylesheet">
   
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://use.typekit.net/nlx7xjv.css">
@@ -43,7 +43,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <a style="color: #330e40;"href="{% url 'index' %}" class="logo"><img style="margin-bottom: 6px;" src="assets/img/logo.png" alt="" class="img-fluid">&nbsp Database of Early English Playbooks</a>
+      <a style="color: #330e40;"href="{% url 'index' %}" class="logo"><img style="margin-bottom: 6px;" src="{% static '/img/logo.png" alt="" class="img-fluid">&nbsp Database of Early English Playbooks</a>
       <!-- Uncomment below if you prefer to use text as a logo -->
       <!-- <h1 class="logo"><a href="index.html">Butterfly</a></h1> -->
 
@@ -82,12 +82,11 @@
 
 
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="{% static '/vendor/glightbox/js/glightbox.min.js' %}"></script>
+<script src="{% static '/vendor/swiper/swiper-bundle.min.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <!-- Template Main JS File -->
-<script src="assets/js/main.js"></script>
-<script src="https://unpkg.com/lunr/lunr.js"></script>
+<script src="{% static '/js/main.js' %}"></script>
 {% block extra_js %}{% endblock %}
 
 </body>
