progress on play type

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -63,8 +63,8 @@
                 {% if data.record_type %}
                 <span class="expand">Record Type: </span><span id="record_type">{{ data.record_type }}</span><br>
                 {% endif %}
-                {% if data.play_type %}
-                <span class="expand">Play Type: </span><span id="play_type">{{ data.play_type }}</span><br>
+                {% if data.play_type_display %}
+                <span class="expand">Play Type: </span><span id="play_type_display">{{ data.play_type_display }}</span><br>
                 {% endif %}
                 {% if data.genre %}
                 <span class="expand">Genre (Annals): </span><span id="genre">{{ data.genre }}</span><br>
