--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -169,7 +169,7 @@
                 <span class="expand">Argument: </span><span id="paratext_argument">{{ data.paratext_argument|safe }}</span><br>
                 {% endif %}
                 {% if data.paratext_charachter_list %}
-                <span class="expand">Charachter List: </span><span id="paratext_charachter_list">{{ data.paratext_charachter_list|safe }}</span><br>
+                <span class="expand">Character List: </span><span id="paratext_charachter_list">{{ data.paratext_charachter_list|safe }}</span><br>
                 {% endif %}
                 {% if data.paratext_errata %}
                 <span class="expand">Errata: </span><span id="paratext_errata">{{ data.paratext_errata|safe }}</span><br>
