--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -53,6 +53,10 @@
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
           <li class="nav-link scrollto dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a href="../cite/">How to Cite DEEP</a></li> 
+              <li><a href="../contact/">Contact Us</a></li>
+              <li><a href="../using_deep/">How to Use DEEP</a></li>
+              <li><a href="../whats_new/">DEEP Update History</a></li>
               <li><a href="download.html">Download Data</a></li>
               <li><a href="sources.html">Bibliographic Sources</a></li>
               <!-- <li><a href="#">Drop Down 3</a></li>
