--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -57,8 +57,8 @@
               <li><a href="../contact/">Contact Us</a></li>
               <li><a href="../using_deep/">How to Use DEEP</a></li>
               <li><a href="../whats_new/">DEEP Update History</a></li>
-              <li><a href="download.html">Download Data</a></li>
-              <li><a href="sources.html">Bibliographic Sources</a></li>
+              <li><a href="../download">Download Data</a></li>
+              <li><a href="../sources/">Bibliographic Sources</a></li>
               <!-- <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li> -->
             </ul>
