--- a/main/templates/flatpages/default.html
+++ b/main/templates/flatpages/default.html
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="card col-lg-12 col-md-12">
 
-              {{ flatpage.content }}
+              {{ flatpage.content|safe }}
 
             </div>
           </div>
