--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -51,7 +51,7 @@
         <ul>
           <li><a class="nav-link scrollto" href="/">Search</a></li>
           <!-- <li><a class="nav-link scrollto" href="browse.html">Browse</a></li> -->
-          <li class="nav-link scrollto dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="nav-link scrollto dropdown"><a href="../about/"><span>About</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="../cite/">How to Cite DEEP</a></li> 
               <li><a href="../contact/">Contact Us</a></li>
