adding results count because

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -93,6 +93,7 @@
     <tbody class="list">
       <thead>
         <tr>
+          <th class="sort col-1" data-sort="result_number" data-default-order='desc' scope="col"></th>
           <th class="sort col-2" data-sort="deep_id" data-default-order='desc' scope="col">DEEP #</th>
           <th class="sort col-2" data-sort="year" data-default-order='desc' scope="col">Year</th>
           <th class="sort col-2" data-sort="author" scope="col">Author</th>
