display date_first_publication_display

--- a/main/templates/item_page.html
+++ b/main/templates/item_page.html
@@ -38,7 +38,7 @@
               </p>
               <p>
                 {% if data.date_first_publication %}
-                <span class="expand">Date of First Publication: </span><span id="date_first_publication">{{ data.date_first_publication }}</span><br>
+                <span class="expand">Date of First Publication: </span><span id="date_first_publication">{{ data.date_first_publication_display }}</span><br>
                 {% endif %}
                 {% if data.book_edition %}
                 <span class="expand">Book Edition: </span><span id="book_edition">{{ data.book_edition }}</span><br>
